[tool.poetry]
package-mode = false

[project]
name = "kafka-producer"
version = "0.1.0"
description = "Kafka producer project"
requires-python = "^3.10"
dependencies = [
    "confluent-kafka (==2.3.0)",
    "pyyaml (==6.0.1)",
    "requests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
